# pyMINFLUX

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  build_and_publish_to_pypi.sh  build_docs.sh  build_exe.sh  build_linux_exe.sh  build_linux_exe_nuitka.sh  build_macos_app.sh  build_macos_app_arm64.sh  build_macos_app_arm64_nuitka.sh  build_macos_app_nuitka.sh  build_macos_app_x86_64.sh  build_windows_exe.cmd  build_windows_exe_nuitka.cmd  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_release.yml  deploy_pages.yml  run_tests.yml
docs/: workflows.md
examples/: combining.ipynb  processing.ipynb
html/: index.html
html/css/: styles.css
paraview_plugins/: pyminflux_reader.py
plugins/hello_world/: main.py  metadata.json  other.py
pyminflux/: __init__.py  main.py  process.py  reader.py  render.py  resources.py  resources.qrc  threads.py  utils.py
pyminflux/analysis/: __init__.py  _analysis.py  builder.py  defaults.py  filter.py  qc.py  tracker.py
pyminflux/base/: __init__.py  _base.py
pyminflux/combiner/: __init__.py  _combine.py
pyminflux/correct/: __init__.py  _bead_alignment.py  _correct.py
pyminflux/fourier/: __init__.py  _fourier.py
pyminflux/plugin/: __init__.py  _plugin.py  _plugin_manager.py  _tools.py
pyminflux/processor/: __init__.py  _dataset.py  _merge.py  _processor.py  processor.cp310-win_amd64.pyd  processor.pyx
pyminflux/reader/: __init__.py  _factory.py  _metadata_reader.py  _msr_reader.py  _napari_msr_reader.py  _native_reader.py  _parser.py  _pmx_reader.py  _reader.py  _reader_factory.py  _reader_v2.py
pyminflux/reader/metadata/: __init__.py  _metadata.py
pyminflux/reader/util/: __init__.py  _util.py
pyminflux/render/: __init__.py  _render.py
pyminflux/settings/: __init__.py  _settings.py  _update_settings.py
pyminflux/spatial/: __init__.py  _spatial.py
pyminflux/state/: __init__.py  _state.py
pyminflux/threading/: __init__.py  _threads.py
pyminflux/threads/: __init__.py  _threads.py  common.py  frc.py  update.py
pyminflux/tools/: fio.py
pyminflux/ui/: Point.py  Vector.py  __init__.py  analyzer.py  analyzer.ui  appeventfilter.py  bead_correspondence_dialog.py  color_unmixer.py  color_unmixer.ui  colorbar.py  colors.py  data_inspector.py  data_inspector.ui  dataset_combine_dialog.py  dataset_merge_dialog.py  dataviewer.py  emittingstream.py  fileviewer.py  fluorophore_detector.py  fluorophore_detector.ui  fluorophore_naming_dialog.py  fluorophore_naming_widget.py  frc_tool.py  frc_tool.ui  graphicscene.py  histogram_plotter.py  histogram_plotter.ui  histogram_viewer.py  histogram_viewer.ui  importer.py  importer.ui  main_plotter.py  main_plotter.ui  main_window.py  main_window.ui  main_window_new.ui  mediator.py  options.py  options.ui  pandas_datamodel.py  (+47 more)
pyminflux/ui/assets/: Logo_v3.icns  create_resources.sh  png_to_icns.sh
pyminflux/ui/custom_dialogs/: __init__.py  _custom_dialogs.py
pyminflux/ui/helpers/: __init__.py  _helpers.py
pyminflux/ui/icons/: icon.icns
pyminflux/ui/state/: __init__.py  _state.py
pyminflux/utils/: __init__.py  _decorators.py  _utils.py  render.py
pyminflux/writer/: __init__.py  _native_writer.py  _pmx_writer.py  _writer.py
templates/: css.mako
test/: __init__.py  test_aggregates.py  test_analysis.py  test_bead_alignment.py  test_correct_functions.py  test_drop_first_localizations.py  test_extended_analysis.py  test_fluorophore_assignment.py  test_fourier_functions.py  test_native_reader_writer.py  test_plotter_measurements.py  test_pmx_io.py  test_process.py  test_processor.py  test_reader.py  test_reader_v2.py  test_render.py  test_sequence_support.py  test_spatial.py  test_tracking.py  test_unmixing.py  test_update_localizations.py  test_utils.py  test_version.py  test_writer.py  test_z_scaling_factor.py
test/data/: .gitignore  Fig1a_Tom70-Dreiklang_Minflux.mat  Fig1b_U2OS_Zyxin-rsEGFP2_Minflux.mat  Fig2_U2OS_Tom70-Dreiklang_ATP5B_AB_Minflux3D.csv  fluo_ids_reassignment.npz  two_fluorophores_assignment.npy  two_fluorophores_df.csv
