[project]
name = "pyminflux"
version = "0.7.0"
description = "Reader, processor, and viewer of MINFLUX raw data."
authors = [
    {name = "Aaron Ponti", email = "aaron.ponti@bsse.ethz.ch"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["MINFLUX", "Visualization", "Filtering", "Analysis", "Python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "pyside6<6.8.0",
    "pyqtgraph>=0.13.7,<0.14.0",
    "scipy>=1.14.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "requests>=2.32,<3.0",
    "h5py>=3.11.0,<4.0.0",
    "vispy>=0.16.1,<0.17.0",
    "natsort>=8.4.0,<9.0.0",
    "zarr<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ordered-set>=4.1.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "pdoc3>=0.10.0,<0.11.0",
    "nuitka>2.7.0",
    "patchelf>=0.17.2.2,<0.18.0.0; sys_platform == 'linux'",
    "zstandard>=0.23.0,<0.24.0",
    "ruff>=0.4.10,<0.5.0",
    "hatchling>=1.27.0",
]

[project.scripts]
pyminflux = "pyminflux.main:main"

[project.urls]
Repository = "https://github.com/bsse-scf/pyMINFLUX"
Documentation = "https://github.com/bsse-scf/pyMINFLUX/wiki"
"Bug Tracker" = "https://github.com/bsse-scf/pyMINFLUX/issues"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
known_third_party = ["PySide6", "h5py", "natsort", "numpy", "pandas", "paraview", "pyqtgraph", "pytest", "requests", "scipy", "sklearn", "vispy", "vtkmodules", "zarr"]

[tool.ruff.lint]
select = ["NPY201"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
